--- a/orders/requirements.txt
+++ b/orders/requirements.txt
@@ -6,6 +6,7 @@ Django==4.1.1
 django-rest-passwordreset==1.3.0
 djangorestframework==3.13.1
 psycopg2-binary==2.9.3
+python-dotenv==0.21.0
 pytz==2022.2.1
 PyYAML==6.0
 requests==2.28.1
