--- a/orders/docker-compose.yml
+++ b/orders/docker-compose.yml
@@ -13,3 +13,11 @@ services:
     image: redis
     ports:
       - "6378:6379"
+  swagger:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "80:8080"
+    environment:
+      SWAGGER_JSON: ./schema.yml
+    volumes:
+      - ./schema.yml:/schema.yml
